--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="/assets/img/WhatsApp Image 2023-08-18 at 05.00.24.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/WhatsApp Image 2023-08-18 at 05.00.24.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Mathew Joseph</a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="/iPortfolio/assets/img/" class="img-fluid" alt="">
+            <img src="assets/img/WhatsApp Image 2023-08-18 at 05.00.24.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Data Whisperer &amp; Data Scientist.</h3>
