--- a/portfo2-details.html
+++ b/portfo2-details.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="/assets/img/WhatsApp Image 2023-08-18 at 05.00.24.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/WhatsApp Image 2023-08-18 at 05.00.24.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Mathew Joseph</a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
