--- a/smart-class.html
+++ b/smart-class.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details </title>
+  <title>Portfolio Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -98,19 +98,27 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="./assets/img/ECOM/Screenshot from 2024-04-25 20-13-31.png" alt="">
+                  <img src="./assets/img/SmartClass/N/Screenshot from 2024-06-26 22-15-18.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="./assets/img/ECOM/Screenshot from 2024-04-25 20-14-04.png" alt="">
+                  <img src="./assets/img/SmartClass/N/Screenshot from 2024-06-26 22-15-39.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="./assets/img/ECOM/Screenshot from 2024-04-25 20-15-20.png" alt="">
+                  <img src="./assets/img/SmartClass/N/Screenshot from 2024-06-26 22-16-27.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="./assets/img/ECOM/Screenshot from 2024-04-25 21-25-09.png" alt="">
+                    <img src="./assets/img/SmartClass/N/Screenshot from 2024-06-26 22-16-49.png" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="./assets/img/SmartClass/N/Screenshot from 2024-06-26 22-17-01.png" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="./assets/img/SmartClass/N/Screenshot from 2024-06-26 22-17-27.png" alt="">
                   </div>
 
               </div>
@@ -124,19 +132,32 @@
               <ul>
                 <li><strong>Category</strong>: Web </li>
                 
-                <li><strong>Project date</strong>: December 12, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/mathew-star/ECOM" target="_blank">https://mathew-star.github.io/Form_Reg/</a></li>
-                <li><strong>Project Demo</strong>: <a href="https://youtu.be/8AzjW1D9cdA?si=gzIrg3Kw8ZgYzZz9" target="_blank">https://youtu.be/8AzjW1D9cdA?si=gzIrg3Kw8ZgYzZz9</a></li>
+                <li><strong>Project date</strong>: June 25, 2023</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/mathew-star/SMARTCLASS" target="_blank">https://github.com/mathew-star/SMARTCLASS</a></li>
+                <li><strong>Project Demo</strong>: <a href="https://youtu.be/ejZ5NqQ1HJM" target="_blank">https://youtu.be/ejZ5NqQ1HJM</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project detail</h2>
-              <p>
-                This is a full stack E-commerce project , which is build using Django.
-                I developed a comprehensive e-commerce website using Django, implementing essential functionalities of an online shopping platform. This project seamlessly integrates user registration with email verification, secure payment processing through Razorpay in test mode, and password reset capabilities using JWT tokens.
-                Deployed the application on a AWS for accessibility and scalability.
+                <h2>Project detail</h2>
+                <p>
+                  I developed a full-stack classroom management platform inspired by Google Classroom. It aims to facilitate seamless communication and management of educational activities between teachers and students. The purpose of this project is never-ending, as you can extend and customize the application to suit various educational needs.
                 </p>
-            </div>
+                <h3>Key Features</h3>
+                <ul>
+                  <li><strong>Real-time Communication:</strong> Utilized WebSockets and Django Channels for live chat functionalities.</li>
+                  <li><strong>Advanced Notification System:</strong> Implemented Celery and Redis for asynchronous task management and real-time notifications.</li>
+                  <li><strong>Assignment Management:</strong> Features for creating, submitting, and grading assignments with detailed tracking.</li>
+                  <li><strong>Interactive UI:</strong> Built with React, Tailwind CSS, and MUI for a user-friendly and responsive interface.</li>
+                  <li><strong>Secure File Management:</strong> Leveraged AWS S3 for scalable and secure media storage.</li>
+                </ul>
+                <h3>Technology Stack</h3>
+                <p>
+                  <strong>Backend:</strong> Django, Django Channels, Celery, Redis, AWS S3<br>
+                  <strong>Frontend:</strong> React, Tailwind CSS, MUI, Zustand, ShadCN<br>
+                  <strong>Server:</strong> Uvicorn (ASGI server)
+                </p>
+  
+              </div>
           </div>
 
         </div>
